Fix large heart icon on mobile

--- a/src/stylesheets/components/_navigation.scss
+++ b/src/stylesheets/components/_navigation.scss
@@ -205,6 +205,10 @@
         }
     }
 
+    .rmwc-icon{
+        max-height: 52px;
+    }
+
 }
 
 .mdc-top-app-bar{
